Use java 11 collector syntax.